<resources>
    <string name="app_name">Cssd M1</string>
    <string name="meta_position">meta_position</string>
    <string name="meta_title">meta_title</string>
    <!-- Urgent Notification -->
    <string name="noti_notification">แจ้งเตือนอุปกรณ์</string>
    <string name="noti_urgent">ด่วนมาก</string>
    <string name="noti_quite_urgent">ด่วน</string>
    <string name="noti_be_careful">ระวังเป็นพิเศษ</string>
    <string name="noti_limit_reprocess">ครบรอบส่งคืน</string>
    <string name="noti_expired">หมดอายุ</string>
    <string name="title_activity_dialog_load_img">dialog_Load_Img</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>
    <string name="toast_10">Please set the printer as black label mode!</string>
    <string name="toast_11">Settings->System->Advanced->InnerPrinter-> set black mark function</string>
    <string name="toast_12">Please set the printer to label mode!</string>

    <string name="init_msg">Initializing module configuration, please wait…</string>
    <string name="poweon_failed">Power on fail</string>
    <string name="low_power">The battery is too low, stop using RFID</string>
    <string name="notice_power_failed">
         1.Please check Settings-〉User Define-〉EMSH Service Settings-〉Chose Enable EMSH service \n
         2.Please make sure there are two battery icons in the upper right corner of the PDA, and both display power；\n
         If there is only one battery icon, make sure the gun is connected reliably to the PDA；\n If the battery icon on the left show the gun battery is out of power, please use 3-in-1 seat for charging\n
         3.If you still have questions, please take a screenshot of EMSH setting -> EMSH status and send it to technical engineer
    </string>
</resources>